RESOLVED FIXED226758
AX: TestWebKitAPI.WebKit.AccessibilityReduceMotion failing on iOS
https://bugs.webkit.org/show_bug.cgi?id=226758
Summary AX: TestWebKitAPI.WebKit.AccessibilityReduceMotion failing on iOS
chris fleizach
Reported 2021-06-07 22:46:36 PDT
TestWebKitAPI.WebKit.AccessibilityReduceMotion is failing on iOS14
Attachments
patch (12.46 KB, patch)
2021-06-07 23:58 PDT, chris fleizach
no flags
patch (12.47 KB, patch)
2021-06-08 00:03 PDT, chris fleizach
achristensen: review-
patch (13.62 KB, patch)
2021-06-09 13:52 PDT, chris fleizach
ews-feeder: commit-queue-
patch (13.64 KB, patch)
2021-06-09 15:11 PDT, chris fleizach
ews-feeder: commit-queue-
patch for landing (13.72 KB, patch)
2021-06-10 16:00 PDT, chris fleizach
no flags
Radar WebKit Bug Importer
Comment 1 2021-06-07 22:46:46 PDT
chris fleizach
Comment 2 2021-06-07 23:58:52 PDT
chris fleizach
Comment 3 2021-06-08 00:03:13 PDT
Alex Christensen
Comment 4 2021-06-08 18:51:59 PDT
Comment on attachment 430816 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=430816&action=review > Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:1146 > +#if PLATFORM(IOS_FAMILY) This should probably be wrapped by a !HAVE(UPDATE_WEB_ACCESSIBILITY_SETTINGS) so we know when we can remove it. Define HAVE_UPDATE_WEB_ACCESSIBILITY_SETTINGS in PlatformHave.h
chris fleizach
Comment 5 2021-06-09 13:52:20 PDT
chris fleizach
Comment 6 2021-06-09 15:11:21 PDT
Alex Christensen
Comment 7 2021-06-10 12:15:46 PDT
Comment on attachment 431016 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=431016&action=review > Source/WTF/wtf/PlatformHave.h:995 > +#define UPDATE_WEB_ACCESSIBILITY_SETTINGS 1 #define HAVE_UPDATE_WEB_ACCESSIBILITY_SETTINGS 1 > Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:1082 > +#if PLATFORM(IOS_FAMILY) && !(HAVE(UPDATE_WEB_ACCESSIBILITY_SETTINGS) && ENABLE(CFPREFS_DIRECT_MODE))
chris fleizach
Comment 8 2021-06-10 16:00:01 PDT
Created attachment 431153 [details] patch for landing
Ryan Haddad
Comment 9 2021-06-10 16:10:58 PDT
Comment on attachment 431016 [details] patch Clearing flags on attachment: 431016 Committed r278736 (238698@main): <https://commits.webkit.org/238698@main>
Ryan Haddad
Comment 10 2021-06-10 16:11:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.