AX: TestWebKitAPI.WebKit.AccessibilityReduceMotion failing on iOS https://bugs.webkit.org/show_bug.cgi?id=226758 <rdar://problem/78984253>

Patch by Chris Fleizach <cfleizach@apple.com> on 2021-06-10
Reviewed by Alex Christensen.

Source/WebKit:

For releases that don't have the accessibility update method, the direct setters need to be called
in order to update the cache.

* Platform/spi/Cocoa/AccessibilitySupportSPI.h:
* WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::increaseContrastPreferenceKey):
(WebKit::setPreferenceValue):

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKit/AccessibilityIncreaseContrast.mm: Added.
(-[WKPreferenceObserverForTestingIncreaseContrast preferenceDidChange:key:encodedValue:]):
(TEST):

Canonical link: https://commits.webkit.org/238698@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278736 268f45cc-cd09-0410-ab3c-d52691b4dbfc